# cpp-empty-repo

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
